--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 						<releaseChannel>LTS</releaseChannel>
 						<password>${anypoint.password}</password>
 						<applicationName>${project.artifactId}</applicationName>
-						<environment>Sandbox</environment>
+						<environment>DEV</environment>
 						<workerType>MICRO</workerType>
 						<region>us-east-2</region>
 						<workers>1</workers>
