--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 						<username>${anypoint.username}</username>
 						<releaseChannel>LTS</releaseChannel>
 						<password>${anypoint.password}</password>
-						<applicationName>${project.artifactId}</applicationName>
+						<applicationName>abc</applicationName>
 						<environment>DEV-2</environment>
 						<workerType>MICRO</workerType>
 						<region>us-east-2</region>
