--- a/pom.xml
+++ b/pom.xml
@@ -33,11 +33,11 @@
 					<cloudHubDeployment>
 						<uri>https://anypoint.mulesoft.com</uri>
 						<java-version>8</java-version>
-						<muleVersion>${app.runtime}</muleVersion>
+						<muleVersion>4.6</muleVersion>
 						<username>${anypoint.username}</username>
-						<releaseChannel>LTS</releaseChannel>
+						<releaseChannel>EDGE</releaseChannel>
 						<password>${anypoint.password}</password>
-						<applicationName>abc</applicationName>
+						<applicationName>ab-1</applicationName>
 						<environment>DEV-2</environment>
 						<workerType>MICRO</workerType>
 						<region>us-east-2</region>
