--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 					<cloudHubDeployment>
 						<uri>https://anypoint.mulesoft.com</uri>
 						<java-version>8</java-version>
-						<muleVersion>4.6</muleVersion>
+						<muleVersion>4.6-java8</muleVersion>
 						<username>${anypoint.username}</username>
 						<releaseChannel>EDGE</releaseChannel>
 						<password>${anypoint.password}</password>
